ch4/src/snapshots/ch4__tests__if_in_init.snap
---
source: ch4/src/lib.rs
expression: prog
---
extern rt_print_int, rt_print_newline, rt_read_int
section .text

    global _start
_start:
    push rbp
    mov rbp, rsp
    sub rsp, 8
    push rbx
    call rt_read_int
    mov rbx, rax
    cmp rbx, 3
    jge .block3
    mov rbx, 77

.block2:
    cmp rbx, 10
    sete al
    movzx rbx, al
    cmp rbx, 0
    je .block1
    mov rax, 2

.conclusion:
    mov rdi, rax
    call rt_print_int
    call rt_print_newline
    pop rbx
    mov rsp, rbp
    pop rbp
    mov rax, 60
    mov rdi, 0
    syscall

.block1:
    mov rax, 41
    jmp .conclusion

.block3:
    mov rbx, 10
    jmp .block2

